RESOLVED FIXED33077
[Qt][WebSocket] SocketStreamHandleSoup.cpp is misnamed
https://bugs.webkit.org/show_bug.cgi?id=33077
Summary [Qt][WebSocket] SocketStreamHandleSoup.cpp is misnamed
Julien Chaffraix
Reported 2009-12-31 04:31:42 PST
r48520 fixes the build for Qt but the naming of this file does not follow the rest of the network/qt naming.
Attachments
Patch (8.10 KB, patch)
2010-01-12 00:00 PST, Fumitoshi Ukai
hausmann: review+
Fumitoshi Ukai
Comment 1 2010-01-12 00:00:50 PST
Simon Hausmann
Comment 2 2010-01-12 13:07:22 PST
Comment on attachment 46344 [details] Patch LGTM
Fumitoshi Ukai
Comment 3 2010-01-12 18:48:26 PST
Note You need to log in before you can comment on or make changes to this bug.