2010-01-12  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Simon Hausmann.

        [Qt][WebSocket] SocketStreamHandleSoup.cpp is misnamed
        https://bugs.webkit.org/show_bug.cgi?id=33077

        * WebCore.pro:
        * platform/network/qt/SocketStreamHandleQt.cpp: Copied from WebCore/platform/network/qt/SocketStreamHandleSoup.cpp.
        * platform/network/qt/SocketStreamHandleSoup.cpp: Removed.


Canonical link: https://commits.webkit.org/44584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53176 268f45cc-cd09-0410-ab3c-d52691b4dbfc